# tg_bot_04

./: .gitignore  README.md  commands.py  commands_menu.py  handlers.py  keyboards.py  main.py  pyproject.toml  requirements.txt
FSM/: handler_FSM.py  keyboard_FSM.py  states.py
shop/: handler_shop.py  keyboards_shop.py
