[project]
name = "tg-bot-04"
version = "0.1.0"
description = ""
authors = [
    {name = "PC_evgenyi",email = "abusyginza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (==3.4.1)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
